# Vibe-Finance

./: .gitignore  MASTER_PROMPT.md  MODE_LOCK.json  MODE_LOCK.md  README.md  pyproject.toml
config/: ledger_legacy_anchor.json  sources.json  strategy.json  task_contracts.json  universe.json
config/evaluation/: b0-b1-b2-v1.json  b3-mg-erc-proposal-v1.json  trading-calendar.json
data/inbox/: 2026-07-19.json  2026-07-20-funds.json  2026-07-20.json  2026-07-21-close-recovery-1643.json  2026-07-21-open.json  2026-07-21-preopen.json  2026-07-21.json  2026-07-22-close-recovery-2024.json  2026-07-22-funds.json  2026-07-22-open.json  2026-07-22-preopen.json  2026-07-22.json  2026-07-23-funds.json  2026-07-23-open.json  2026-07-23-preopen.json  2026-07-23.json  2026-07-24-preopen.json
docs/: AUTOMATION.md  DEEPSEEK_COSTS.md  DOCUMENT_LOG_INDEX.md  GITHUB_AUTOMATION.md  PLUGIN_POLICY.md  REFERENCE_PROJECTS.md  SKILL_MEMORY.md  SOURCES.md  STOCK_FUND_STRATEGY.md  TIANTIAN_FUND.md
scripts/: audit_evolution_gate.py  sync_github.sh
tests/: test_candidate_strategies.py  test_evaluation.py  test_evaluation_execution.py  test_evaluation_runner.py  test_evolution.py  test_frozen_baseline.py  test_open_capture.py  test_pipeline.py  test_skill_memory.py  test_sync_evolution.py  test_task_contracts.py  test_transactions.py
vibe_finance/: __init__.py  __main__.py  candidate_strategies.py  evaluation.py  evaluation_execution.py  evaluation_runner.py  evolution.py  frozen_baseline.py  open_capture.py  pipeline.py  skill_memory.py  task_contracts.py  transaction.py
(+143 files in other folders)
