[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-finance"
version = "0.1.0"
description = "Auditable China market virtual portfolio research loop"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vibe-finance = "vibe_finance.__main__:main"

[tool.setuptools]
packages = ["vibe_finance"]
